[package]
authors = ["Wim Looman <wim.looman@kiwi.ki>"]
name = "futures-hal"
version = "0.1.0"

[dependencies]
nb = "0.1.1"

[dependencies.pin-api]
version = "0.1.1"
default-features = false

[dependencies.futures-stable]
version = "0.2.0-alpha"
default-features = false

[dependencies.futures-core]
version = "0.2.0-alpha"
default-features = false

[dependencies.embedded-hal]
version = "0.1.2"
features = ["unproven"]
