[package]
authors = ["Wim Looman <wim.looman@kiwi.ki>"]
name = "futures-hal"
version = "0.1.0"

[dependencies]
nb = "0.1.1"

[dependencies.pin-api]
version = "0.1.1"
default-features = false

[dependencies.futures-core]
version = "0.2.0-alpha"
default-features = false

[dependencies.embedded-hal]
version = "0.1.2"
features = ["unproven"]

[patch.crates-io.futures]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-core]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-executor]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-io]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-util]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"

[patch.crates-io.embedded-hal]
git = "https://github.com/Nemo157/embedded-hal"
branch = "input-edges"
